# grindy

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
logger/: README.md  pyproject.toml
logger/src/grindy_logger/: __init__.py  __main__.py  client.py  models.py  writer.py
src/: index.html  index.js  main.rs  scale.rs  ui.rs  web.rs
