[package]
edition = "2024"
name = "grindy"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
embassy-executor = { version = "~0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "~0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "~0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-net = { version = "~0.7", features = ["tcp", "proto-ipv4", "medium-ethernet"] }
defmt = "~1.0"
defmt-rtt = "~1.0"
#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "~0.7", features = ["inline-asm"] }
cortex-m-rt = "~0.7"
panic-probe = { version = "~1.0", features = ["print-defmt"] }
loadcell = "~0.3"
heapless = { version = "~0.9", features = ["serde"] }
num-traits = { version = "~0.2", default-features = false }
embassy-sync = "~0.7"
embassy-futures = "~0.1"
cyw43 = { version = "~0.5", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "~0.8", features = ["defmt"] }
static_cell = "~2.1"
picoserve = { version = "~0.17.1", features = ["embassy", "log", "ws"] }
serde = { version = "~1.0", default-features = false, features = ["derive"] }
postcard = { version = "~1.0", default-features = false, features = ["heapless"] }

[[bin]]
name = "grindy"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
