[project]
name = "grindy-logger"
version = "0.1.0"
description = "WebSocket data logger for Grindy coffee grinder controller"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Grindy Project" }
]

dependencies = [
    "websockets>=12.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
grindy-logger = "grindy_logger.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/grindy_logger"]
